# app

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  PRIVACY.md  README.md  SECURITY.md  _config.yml  build.bat  build.sh  htmltest.md  index.html  main.cpp
.forgejo/workflows/: artifacts.yml  test.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: vulnerability.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.yml
.github/workflows/: arm.yml  artifacts.yml  build-and-upload.yml  codeql.yml  copyright.yml  coveralls.yml  issue-closer.yml
LEGAL/: PRIVACY.md
src/: .main.cpp.swp  ansi.hpp  calculator_shell.hpp  char.hpp  console.hpp  definitions.hpp  discord.hpp  main.cpp  telegram.hpp
